--- Version 0.2.9 - Sep-22-2004
- use KDialog::marginHint () and KDialog::spacingHint () in plugins
- fixed a crash in the formula widget
- converted plugin element to QWidgets (in preparation for more extensive rework of plugin elements)
- almost complete rework of data editor
- added edit support for factors
- added support for editing factor levels
- data editor stores data more efficiently
- renaming columns in a data.frame does not change their position in the frame
- recursively remove children of removed objects (fixes one of probably many memory leaks)
- wait for backend-thread to terminate on exit. Avoids crashes when closing RKWard
- do not crash if loading the "rkward" R package fails, but rather display a nice error-message

--- Version 0.2.8 - Sep-09-2004
- override for require () to show install-packages dialog, if required package is not installed.
- Dialog to load/unload packages, update and install packages from CRAN
- added capability to cancel commands (not properly integrated in the GUI, yet)
- basic name checking for objects added or renamed by the user
- remove uneccessary blank are below menu in R-Console window
- fix R process busy/idle display
- show error message if loading workspace fails
- do not ask for save, if workspace is empty
- results of user-commands get printed if not invisible (i.e. just like in a regular R session)
- provide at least basic feedback on syntax errors
- added communication channel from R-backend to RKWard. Initial features:
	- checking for errors setting up the connection
	- simple rk.sync for synchronisation of objects modified in the R workspace
	- rk.get.tempfile.name for generation of a suitable temporary file (e.g. for storing images)
	- allows for in-place execution of commands or scheduling of commands in the regular stack
- auto addition of rows/columns when typing on last row/column
- allow deletion of rows without losing meta-data

--- Version 0.2.7 - Sep-02-2004