@@ -1,4 +1,5 @@
 Authors so far:
 - Thomas Friedrichsmeier (tfry AT users DOT sourceforge DOT net)
+- Pierre Ecochard (since 0.2.9)
 
 Note that a number of people have contributed comments/ideas but are not mentioned in this file
